snapcatch2 (2.9.1.0~xenial) xenial; urgency=high

  * Upgraded to Catch2 version 2.9.1.

 -- Alexis Wilke <alexis@m2osw.com>  Mon,  8 Jul 2019 14:23:36 -0800

snapcatch2 (2.8.0.4~xenial) xenial; urgency=high

  * Added the ExceptionWatcher to easily verify the message of an exception.
  * Added a --verbose in the list of default options. The --verbosity from
    the catch environment does something else.
  * Added a finished_callback function pointer called after all the tests ran.

 -- Alexis Wilke <alexis@m2osw.com>  Sat,  1 Jun 2019 20:27:28 -0800

snapcatch2 (2.8.0.3~xenial) xenial; urgency=high

  * Fixed references to "clara" which is inside the Catch namespace.

 -- Alexis Wilke <alexis@m2osw.com>  Sat,  1 Jun 2019 13:11:38 -0800

snapcatch2 (2.8.0.2~xenial) xenial; urgency=high

  * Moved the safe_setenv class to snapdev instead.

 -- Alexis Wilke <alexis@m2osw.com>  Sat,  1 Jun 2019 00:50:37 -0800

snapcatch2 (2.8.0.1~xenial) xenial; urgency=high

  * Added our own snapcatch2.hpp header so we do not have to re-write our
    main() each time. All our tests have quite a few paramters in common.

 -- Alexis Wilke <alexis@m2osw.com>  Sat,  1 Jun 2019 00:16:24 -0800

snapcatch2 (2.8.0.0~xenial) xenial; urgency=high

  * Upgrading to version 2.8.0 which just came out.

 -- Alexis Wilke <alexis@m2osw.com>  Mon, 27 May 2019 01:27:16 -0800

snapcatch2 (2.7.2.10~xenial) xenial; urgency=high

  * Fixed the architecture of the docs (any -> all).

 -- Alexis Wilke <alexis@m2osw.com>  Sat, 25 May 2019 17:13:23 -0800

snapcatch2 (2.7.2.9~xenial) xenial; urgency=high

  * Fixed the name of the README.md file in the debian/docs file.

 -- Alexis Wilke <alexis@m2osw.com>  Sat, 25 May 2019 17:03:28 -0800

snapcatch2 (2.7.2.8~xenial) xenial; urgency=high

  * Removing the debian/snapcatch2 introducer, not necessary with multiple
    package definitions

 -- Alexis Wilke <alexis@m2osw.com>  Sat, 25 May 2019 16:58:20 -0800

snapcatch2 (2.7.2.7~xenial) xenial; urgency=high
